add barcodes to online friends

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
+        <meta-data
+            android:name="com.google.android.gms.vision.DEPENDENCIES"
+            android:value="barcode"/>
+
         <activity android:name="seacoalCo.bill_it.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
