--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:17.0.2'
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.google.firebase:firebase-ml-vision:16.0.0'
+    compile 'com.github.kenglxn.QRGen:android:2.5.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
